@@ -56,6 +56,7 @@ $strAlterOrderBy = 'Lajittele taulu';
 $strAnalyze = 'Analysoi';
 $strAnalyzeTable = 'Analysoi taulu';
 $strAnd = 'Ja';
+$strAndSmall = 'ja';
 $strAndThen = 'ja sen jälkeen';
 $strAngularLinks = 'Kulmikkaat linkit';
 $strAnIndex = 'Sarakkeelle %s on lisätty indeksi';
@@ -141,7 +142,7 @@ $strChangeCopyModeRevoke = ' ... peruuta kaikki vanhan käyttäjän aktiiviset k
 $strChangeCopyUser = 'Vaihda kirjautumistietoja / Kopioi käyttäjä';
 $strChangeDisplay = 'Valitse näytettävä sarake';
 $strChange = 'Muokkaa';
-$strChangePassword = 'Vaihda salasanaa';
+$strChangePassword = 'Vaihda salasana';
 $strCharset = 'Merkistökoodaus';
 $strCharsetOfFile = 'Tiedoston merkistö:';
 $strCharsetsAndCollations = 'Merkistökoodaukset ja aakkosjärjestykset';
@@ -163,8 +164,9 @@ $strComments = 'Kommentit';
 $strCompatibleHashing = 'MySQL&nbsp;4.0 -yhteensopiva';
 $strCompleteInserts = 'Kokonaiset lisäyslauseet';
 $strCompression = 'Pakkaus';
-$strCompressionWillBeDetected = 'Seuraavat tiedostonpakkausmuodot löydetään automaattisesti: %s';
+$strCompressionWillBeDetected = 'Seuraavat tiedostonpakkausmuodot havaitaan automaattisesti: %s';
 $strConfigDefaultFileError = 'Oletusasetuksia ei voitu ladata kohteesta: "%1$s"';
+$strConfigDirectoryWarning = 'Kansio [code]config[/code], jota asennusskripti käyttää, on vielä phpMyAdmin-hakemistossa. Sinun tulee poistaa kansio, kun phpMyAdminin asetukset on määritetty.';
 $strConfigFileError = 'phpMyAdmin ei pysty lukemaan asetustiedostoa.<br />Tämä saattaa johtua PHP:n löytämästä tiedoston virheestä tai tiedoston puuttumisesta.<br />Voit avata tiedoston alla olevasta linkistä ja lukea mahdolliset PHP-virheilmoitukset. Todennäköisimmin joltain riviltä puuttuu lainausmerkki tai puolipiste.<br />Jos linkistä avautuva sivu on tyhjä, asetustiedostossa ei ollut virhettä.';
 $strConfigureTableCoord = 'Määrittele koordinaatit taululle %s';
 $strConnectionError = 'Yhteyttä ei voitu muodostaa: virheelliset asetukset.';
@@ -191,6 +193,7 @@ $strCreateRelation = 'Luo relaatio';
 $strCreateTable  = 'Luo taulu';
 $strCreateUserDatabaseName = 'Luo samanniminen tietokanta ja anna kaikki oikeudet';
 $strCreateUserDatabaseNone = 'Ei mitään';
+$strCreateUserDatabasePrivileges = 'Anna tietokannalle &quot;%s&quot; kaikki oikeudet';
 $strCreateUserDatabase = 'Tietokanta käyttäjälle';
 $strCreateUserDatabaseWildcard = 'Anna kaikki oikeudet tietokannalle käyttäen korvausmerkkiä (username\_%)';
 $strCreationDates = 'Luonti-, päivitys- ja tarkistuspäiväykset';
@@ -254,6 +257,7 @@ $strDisplayPDF = 'Näytä PDF-kaavio';
 $strDoAQuery = 'Suorita mallin mukainen kysely (jokerimerkki: "%")';
 $strDocSQL = 'DocSQL';
 $strDocu = 'Ohjeet';
+$strDoNotAutoIncrementZeroValues = 'Älä käytä nolla-arvoissa AUTO_INCREMENT:iä';
 $strDownloadFile = 'Lataa tiedosto';
 $strDoYouReally = 'Haluatko varmasti ';
 $strDropDatabaseStrongWarning = 'Olet aikeissasi HÄVITTÄÄ kokonaisen tietokannan!';
@@ -340,6 +344,7 @@ $strGeneratePassword = 'Keksi salasana';
 $strGenTime = 'Luontiaika';
 $strGeorgian = 'Georgialainen';
 $strGerman = 'Saksalainen';
+$strGetMoreThemes = 'Hae teemoja lisää!';
 $strGlobal = 'globaali';
 $strGlobalPrivileges = 'Globaalit käyttöoikeudet';
 $strGlobalValue = 'Globaali arvo';
@@ -361,6 +366,7 @@ $strHome = 'Etusivu';
 $strHomepageOfficial = 'phpMyAdminin kotisivut';
 $strHostEmpty = 'Palvelimen nimi puuttuu!';
 $strHost = 'Palvelin';
+$strHostTableExplanation = 'Kun Host-taulua käytetään, tätä kenttää ei huomioida, vaan sen sijaan käytetään Host-taulussa olevia tietoja.';
 $strHTMLExcel = 'Microsoft Excel 2000';
 $strHTMLWord = 'Microsoft Word 2000';
 $strHungarian = 'Unkarilainen';
@@ -455,6 +461,7 @@ $strLocalhost = 'Paikallinen';
 $strLocationTextfile = 'Tiedoston sijainti';
 $strLoginInformation = 'Kirjautumistiedot';
 $strLogin = 'Kirjaudu sisään';
+$strLoginWithoutPassword = 'Kirjautuminen ilman salasanaa on kielletty asetuksissa (katso AllowNoPassword)';
 $strLogout = 'Poistu';
 $strLogPassword = 'Salasana:';
 $strLogServerHelp = 'Voit syöttää verkkotunnuksen/IP-osoitteen ja portin välilyönnillä erotettuna.';
@@ -521,6 +528,7 @@ $strNoFrames = 'PhpMyAdmin toimii parhaiten <b>kehyksiä</b> tukevalla selaimell
 $strNoIndex = 'Indeksiä ei ole määritelty!';
 $strNoIndexPartsDefined = 'Indeksin osia ei ole määritelty!';
 $strNoModification = 'Ei muutoksia';
+$strNoneDefault = 'Ei mikään';
 $strNone = 'Ei mitään';
 $strNoOptions = 'Tälle tiedostomuodolle ei ole valinta-asetuksia';
 $strNoPassword = 'Ei salasanaa';
@@ -702,6 +710,7 @@ $strRelationView = 'Relaationäkymä';
 $strReloadingThePrivileges = 'Ladataan käyttöoikeuksia uudelleen';
 $strReload = 'Lataa uudelleen';
 $strReloadPrivileges = 'Lataa käyttöoikeudet uudelleen';
+$strRemoveCRLF = 'Poista kentistä CRLF-merkit';
 $strRemovePartitioning = 'Poista ositus';
 $strRemoveSelectedUsers = 'Poista valitut käyttäjät';
 $strRenameDatabaseOK = 'Tietokannan %s nimi on nyt %s';
@@ -712,6 +721,10 @@ $strRepairTable = 'Korjaa taulu';
 $strReplaceNULLBy = 'Korvaa NULL-merkki tällä:';
 $strReplaceTable = 'Korvaa taulun nykyiset rivit tiedostolla';
 $strReplication = 'Replikaatio';
+$strReplicationStatusInfo = 'MySQL-palvelin toimii %s-tilassa, <b>replikaatio</b>-prosessissa. Hae palvelimen replikaatiotilasta lisää tietoja kohdasta <a href="#replication">Replikaatio</a>.';
+$strReplicationStatus_master = 'Isännän tila';
+$strReplicationStatus = 'Replikaation tila';
+$strReplicationStatus_slave = 'Alipalvelimen tila';
 $strReset = 'Nollaa';
 $strResourceLimits = 'Resurssirajoitukset';
 $strRestartInsertion = 'Aloita lisäys alusta %s rivillä';
@@ -1004,11 +1017,13 @@ $strSetupSaveDir_desc = 'Hakemisto, jonne viennit voi tallentaa palvelimella';
 $strSetupSaveDir_name = 'Tallennushakemisto';
 $strSetupServerAuthConfigMsg = 'Asetit [kbd]config[/kbd]-todennustyypin ja sisällytit käyttäjänimen ja salasanan automaattista kirjautumista varten. Tämä ei ole suotava vaihtoehto oikeille palvelimille. Joka tietää tai arvaa phpMyAdmin-osoitteesi pystyy suoraan käyttämään phpMyAdmin-paneeliasi.  [a@?page=servers&amp;mode=edit&amp;id=%1$d#tab_Server]Todennustyypiksi[/a] kannattaa asettaa [kbd]cookie[/kbd] tai [kbd]http[/kbd].';
 $strSetupServerExtensionMsg = 'Suorituskykysyistä tulisi käyttää mysqli-laajennusta.';
+$strSetupServerNoPasswordMsg = 'Sallit yhteyden muodostamisen palvelimeen ilman salasanaa.';
 $strSetupServersAdd = 'Lisää uusi palvelin';
 $strSetupServers_AllowDeny_order_desc = 'Jätä tyhjäksi, jos tätä ei käytetä';
 $strSetupServers_AllowDeny_order_name = 'Palvelintodennuksen järjestys';
 $strSetupServers_AllowDeny_rules_desc = 'Käytä oletusarvoja jättämällä tyhjäksi';
 $strSetupServers_AllowDeny_rules_name = 'Palvelintodennuksen säännöt';
+$strSetupServers_AllowNoPassword_name = 'Salli kirjautumiset ilman salasanaa';
 $strSetupServers_AllowRoot_name = 'Salli pääkäyttäjän kirjautuminen';
 $strSetupServers_auth_swekey_config_desc = '[a@http://swekey.com]SweKey-laitteistotodennuksen[/a] asetustiedoston polku (ei dokumenttijuuressa; suositeltu: /etc/swekey.conf)';
 $strSetupServers_auth_swekey_config_name = 'SweKey-asetustiedosto';
@@ -1039,6 +1054,7 @@ $strSetupServers_hide_db_desc = 'Piilota tietokannat, jotka vastaavat säännöl
 $strSetupServers_hide_db_name = 'Piilota tietokannat';
 $strSetupServers_history_desc = 'Jätä tyhjäksi, jos et halua SQL-kyselyhistorian tukea; oletusarvo: [kbd]pma_history[/kbd]';
 $strSetupServers_history_name = 'SQL-kyselyhistorian taulu';
+$strSetupServers_host_desc = 'MySQL-palvelimen verkkonimi';
 $strSetupServers_host_name = 'Palvelimen verkkonimi';
 $strSetupServers_LogoutURL_name = 'Uloskirjautumisen verkko-osoite';
 $strSetupServers_nopassword_desc = 'Yritä yhdistää ilman salasanaa';
@@ -1073,6 +1089,7 @@ $strSetupServers_user_desc = 'Jätä tyhjäksi, jos et käytä config-todennusta
 $strSetupServers_user_name = 'Config-todennuksen käyttäjä';
 $strSetupServers_verbose_check_desc = 'Poista käytöstä, mikäli tiedät pma_*-taulujesi olevan ajan tasalla. Tämä estää yhteensopivuustarkistukset ja lisää siten suorituskykyä.';
 $strSetupServers_verbose_check_name = 'Yksityiskohtainen tarkistus';
+$strSetupServers_verbose_desc = 'Käyttäjäystävällinen kuvaus tästä palvelimesta. Jätä tyhjäksi, jos haluat, että tässä lukee sen sijaan palvelimen verkkonimi.';
 $strSetupServers_verbose_name = 'Tämän palvelimen yksityiskohtainen nimi';
 $strSetupSetValue = 'Aseta arvo: %s';
 $strSetupShowAll_desc = 'Pitääkö käyttäjälle näyttää "Näytä kaikki (tietueet)" -painike';
@@ -1129,6 +1146,8 @@ $strSetupZipDumpExportWarning = '[a@?page=form&amp;formset=features#tab_Import_e
 $strSetupZipDumpImportWarning = '[a@?page=form&amp;formset=features#tab_Import_export]Zip-purkuun[/a] tarvitaan funktioita (%s), jotka eivät ole käytettävissä tässä järjestelmässä.';
 $strSetupZipDump_name = 'ZIP';
 $strShowAll = 'Näytä kaikki';
+$strShowBinaryContents = 'Näytä binäärisisältö';
+$strShowBLOBContents = 'Näytä BLOB-sisältö';
 $strShowColor = 'Näytä värit';
 $strShowDatadictAs = 'Tietosanaston tallennusmuoto';
 $strShowFullQueries = 'Näytä kyselyt kokonaisuudessaan';
@@ -1146,7 +1165,7 @@ $strShowSlaveHosts = 'Näytä alipalvelimet';
 $strShowSlaveStatus = 'Näytä alipalvelimen tila';
 $strShowStatusBinlog_cache_disk_useDescr = 'Kertoo binäärilokin tilapäistä välimuistia käyttäneiden transaktioiden määrän sellaisissa tapauksissa, joissa transaktiot ovat ylittäneet "binlog_cache_size"-muuttujan arvon ja käyttäneet tilapäistiedostoa transaktiokyselyjen tallentamiseen.';
 $strShowStatusBinlog_cache_useDescr = 'Binäärilokin tilapäistä välimuistia käyttäneiden transaktioiden määrä.';
-$strShowStatusCreated_tmp_disk_tablesDescr = 'Kertoo, kuinka monta palvelimen automaattisesti luomia tilapäistauluja levyllä on. Jos Created_tmp_disk_tables-parametrin arvo on liian suuri, nosta tmp_table_size:n arvoa, jotta tilapäisiä tauluja säilytettäisiin muistissa eikä levyllä.';
+$strShowStatusCreated_tmp_disk_tablesDescr = 'Kertoo, kuinka monta palvelimen automaattisesti luomia tilapäistaulua levyllä on. Jos Created_tmp_disk_tables-parametrin arvo on liian suuri, nosta tmp_table_size:n arvoa, jotta tilapäisiä tauluja säilytettäisiin muistissa eikä levyllä.';
 $strShowStatusCreated_tmp_filesDescr = 'Mysqld-palvelun luomien tilapäistiedostojen määrä.';
 $strShowStatusCreated_tmp_tablesDescr = 'Kertoo, kuinka monta tilapäistaulua palvelin on automaattisesti luonut kyselyjä suorittaessaan.';
 $strShowStatusDelayed_errorsDescr = 'Virheen aiheuttaneiden, INSERT DELAYED -kyselyllä kirjoitettujen rivien määrä (virheenä todennäköisesti päällekkäinen avain).';
@@ -1283,6 +1302,7 @@ $strStandInStructureForView = 'Näkymän vararakenne';
 $strStatCheckTime = 'Viimeksi tarkistettu';
 $strStatCreateTime = 'Luotu';
 $strStatement = 'Tieto';
+$strStatic = 'staattinen';
 $strStatisticsOverrun = 'Ruuhkaisten palvelinten tavulaskurit saattavat ylivuotaa, joten MySQL-palvelimen ilmoittamat tilastotiedot saattavat olla virheellisiä.';
 $strStatUpdateTime = 'Viimeksi päivitetty';
 $strStatus = 'Tila';
@@ -1441,24 +1461,4 @@ $strYes = 'Kyllä';
 $strZeroRemovesTheLimit = 'Huom: Näiden valintojen asettaminen nollaksi (0) poistaa rajoituksen.';
 $strZip = '"zip-pakattu"';
 
-$strSetupServers_host_desc = 'Hostname where MySQL server is running';  //to translate
-$strSetupServers_verbose_desc = 'A user-friendly description of this server. Leave blank to display the hostname instead.';  //to translate
-$strCreateUserDatabasePrivileges = 'Grant all privileges on database &quot;%s&quot;';  //to translate
-$strShowBinaryContents = 'Show binary contents';  //to translate
-$strShowBLOBContents = 'Show BLOB contents';  //to translate
-$strStatic = 'static';  //to translate
-$strLoginWithoutPassword = 'Login without a password is forbidden by configuration (see AllowNoPassword)';  //to translate
-$strSetupServerNoPasswordMsg = 'You allow for connecting to the server without a password.';  //to translate
-$strSetupServers_AllowNoPassword_name = 'Allow logins without a password';  //to translate
-$strHostTableExplanation = 'When Host table is used, this field is ignored and values stored in Host table are used instead.';  //to translate
-$strGetMoreThemes = 'Get more themes!';  //to translate
-$strNoneDefault = 'None';  //to translate
-$strConfigDirectoryWarning = 'Directory [code]config[/code], which is used by the setup script, still exists in your phpMyAdmin directory. You should remove it once phpMyAdmin has been configured.';  //to translate
-$strRemoveCRLF = 'Remove CRLF characters within fields';  //to translate
-$strDoNotAutoIncrementZeroValues = 'Do not use AUTO_INCREMENT for zero values';  //to translate
-$strAndSmall = 'and';  //to translate
-$strReplicationStatus = 'Replication status';  //to translate
-$strReplicationStatusInfo = 'This MySQL server works as %s in <b>replication</b> process. For further information about replication status on the server, please visit the <a href="#replication">replication section</a>.';  //to translate
-$strReplicationStatus_master = 'Master status';  //to translate
-$strReplicationStatus_slave = 'Slave status';  //to translate
 ?>
